force-app/main/default/objects/Pagamento__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <formula>Valor_Total_Despesas__c +  Valor_Total_Viagens__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor das Despesas + Valor das Viagens</inlineHelpText>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>