force-app/main/default/objects/Pagamento__c/fields/Valor_Total_Despesas__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Despesas__c</fullName>
    <label>Valor Total Despesas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>