force-app/main/default/objects/Pagamento__c/fields/Valor_Total_Viagens__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Viagens__c</fullName>
    <label>Valor Total Viagens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>