force-app/main/default/objects/Pagamento__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Valor_Total_Despesas__c</columns>
    <columns>Valor_Total_Viagens__c</columns>
    <columns>Valor_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>