force-app/main/default/objects/Pagamento__c/listViews/Todos_os_Pagamentos.listView-meta.xml
<ListView>
    <fullName>Todos_os_Pagamentos</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos os Pagamentos</label>
</ListView>